goto ds hyperlink fixed

--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -311,7 +311,7 @@
                                                     [@cardAction]="startServiceAttributes['complete']">
                                                     <strong> Start all Process</strong> Initiated
                                                     <div class="mt-2 ml-2">
-                                                        <a class="text-info" [routerLink]="['../../../sm']">
+                                                        <a class="text-info" [routerLink]="['../sm']">
                                                             Go to Dataservice
                                                         </a>
                                                     </div>
@@ -366,7 +366,7 @@
                                                     [@cardAction]="startServiceAttributes['complete']">
                                                     <strong> Stop all Process</strong> Initiated
                                                     <div class="mt-2 ml-2">
-                                                        <a class="text-info" [routerLink]="['../../../sm']">
+                                                        <a class="text-info" [routerLink]="['../sm']">
                                                             Go to Dataservice
                                                         </a>
                                                     </div>
