--- a/src/app/home/agents/agent-grid-cell/agent-grid-cell.component.html
+++ b/src/app/home/agents/agent-grid-cell/agent-grid-cell.component.html
@@ -25,45 +25,46 @@
         <span *ngIf="field == 'lastInvokedAt'">{{value | dateFormat:'YYYY MMM DD, HH:mm:ss, z':'Etc/Zulu'}}</span>
         <span *ngIf="field == 'release'">{{value}}</span>
         <span *ngIf="field == 'pendingFiles'">{{value}}</span>
-        <span *ngIf="field == '_options'">
-            <!-- <a *ngIf="hasViewPermission(data._id, 'PMAPW')" href="#" class="text-accent mr-2"
-                (click)="$event.preventDefault();activateOption('changePassword')">
-                Change Password
-            </a> -->
-            <a *ngIf="hasViewPermission(data._id, 'PMADL')" href="#" class="text-accent mr-2"
-                (click)="$event.preventDefault();activateOption('download')">
-                Download
-            </a>
-            <!-- <a *ngIf="hasViewPermission(data._id, 'PMADL')" href="#" class="text-accent mr-2"
-                (click)="$event.preventDefault();activateOption('update')">
-                Update
-            </a> -->
-            <a *ngIf="data.status === 'RUNNING' && hasViewPermission(data._id, 'PMAS')" href="#"
-                class="text-accent mr-2" (click)="$event.preventDefault();activateOption('stop')">
-                Stop
-            </a>
-            <a *ngIf="(data.status === 'RUNNING' || data.status === 'STOPPED' || data.status === 'PENDING' ) && hasViewPermission(data._id, 'PMAEN')"
-                href="#" class="text-accent mr-2" (click)="$event.preventDefault();activateOption('disable')">
-                Disable
-            </a>
-            <a *ngIf="data.status === 'DISABLED' && hasViewPermission(data._id, 'PMAEN')" href="#"
-                class="text-accent mr-2" (click)="$event.preventDefault();activateOption('enable')">
-                Enable
-            </a>
-            <!-- <span class="fa fa-info-circle text-accent mr-2" ngbTooltip="Right Click on the record for More Options" container="body"></span> -->
-            <!-- <a *ngIf="data.type == 'APPAGENT' && hasViewPermission(data._id, 'PMABD')" href="#" class="text-accent mr-2"
-                (click)="$event.preventDefault();activateOption('delete')">
-                Delete
-            </a>
-            <a *ngIf="hasViewPermission(data._id, 'PMABU')" href="#" class="text-accent mr-2"
-                (click)="$event.preventDefault();activateOption('edit')">
-                Edit
-            </a> -->
-        </span>
     </ng-container>
     <ng-container *ngIf="!value">
         <span class="text-muted">N.A.</span>
     </ng-container>
+    <span *ngIf="field == '_options'">
+        <!-- <a *ngIf="hasViewPermission(data._id, 'PMAPW')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('changePassword')">
+            Change Password
+        </a> -->
+        <a *ngIf="hasViewPermission(data._id, 'PMADL')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('download')">
+            Download
+        </a>
+        <!-- <a *ngIf="hasViewPermission(data._id, 'PMADL')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('update')">
+            Update
+        </a> -->
+        <a *ngIf="data.status === 'RUNNING' && hasViewPermission(data._id, 'PMAS')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('stop')">
+            Stop
+        </a>
+        <a *ngIf="(data.status === 'RUNNING' || data.status === 'STOPPED' || data.status === 'PENDING' ) && hasViewPermission(data._id, 'PMAEN')"
+            href="#" class="text-accent mr-2" (click)="$event.preventDefault();activateOption('disable')">
+            Disable
+        </a>
+        <a *ngIf="data.status === 'DISABLED' && hasViewPermission(data._id, 'PMAEN')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('enable')">
+            Enable
+        </a>
+        <!-- <span class="fa fa-info-circle text-accent mr-2" ngbTooltip="Right Click on the record for More Options" container="body"></span> -->
+        <!-- <a *ngIf="data.type == 'APPAGENT' && hasViewPermission(data._id, 'PMABD')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('delete')">
+            Delete
+        </a>
+        <a *ngIf="hasViewPermission(data._id, 'PMABU')" href="#" class="text-accent mr-2"
+            (click)="$event.preventDefault();activateOption('edit')">
+            Edit
+        </a> -->
+    </span>
 </div>
 
-<odp-agents-options *ngIf="sendOption" [activateOption]="sendOption" (output)="updateStatus($event)"></odp-agents-options>
+<odp-agents-options *ngIf="sendOption" [activateOption]="sendOption" (output)="updateStatus($event)">
+</odp-agents-options>
