rename custom user details to attributes

--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -227,7 +227,7 @@
                 <span class="icon-wrapper modify rounded-circle d-flex align-items-center justify-content-center mr-2">
                     <odp-user-icon [size]="18" color="202A36" class="mt-1"></odp-user-icon>
                 </span>
-                <span class="font-weight-bold">User Custom Detail </span>
+                <span class="font-weight-bold">Attributes </span>
             </div>
             <span class="fa fa-times hover" (click)="manageAttributeModalRef.close(false)"></span>
         </div>
