--- a/src/app/home/schema-utils/wizards/wizards.component.html
+++ b/src/app/home/schema-utils/wizards/wizards.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-row w-100 h-100">
-    <div class="d-flex flex-column w-50 steps-div">
+<div class="d-flex flex-row w-100 h-100 ">
+    <div class="d-flex flex-column w-50 steps-div bg-light h-auto align-items-center justify-content-center">
         <ng-container *ngIf="steps.length>0">
-            <div class="d-flex align-items-center steps-count bg-gray border-bottom">
-                <div class="steps-wrapper d-flex align-items-center">
+            <div class="d-flex align-items-center steps-count bg-gray border-bottom w-100">
+                <div class="steps-wrapper d-flex align-items-center mr-auto">
                     <div class="d-flex align-items-center"
                         *ngFor="let step of steps ;let stepIndex = index;let l = last">
                         <div class="border-bottom fixed-width-line"></div>
@@ -38,7 +38,7 @@
                     <div class="border-bottom fixed-width-line"></div>
                 </div>
             </div>
-            <div class="action d-flex align-items-center justify-content-between w-100 p-3" *ngIf="edit">
+            <div class="action d-flex align-items-center justify-content-between w-100 p-3 bg-white" *ngIf="edit">
                 <div class="d-flex align-items-center position-relative">
                     <!--<strong [ngClass]="{'mr-2': !edit.status, 'mr-3': edit.status}">{{ stepIndex }}</strong>-->
                     <input *ngIf="edit.status" type="text" class="form-control pr-4" id="stepName" name="sbName"
@@ -57,8 +57,8 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-column h-100">
-                <div class="steps-div d-flex flex-column h-50"
+            <div class="d-flex flex-column h-100 w-100 bg-white">
+                <div class="steps-div d-flex flex-column"
                     [ngClass]="{'empty-steps-div': !selectedStepFields.length, 'content-steps-div': selectedStepFields.length}"
                     *ngIf="selectedStepFields.length">
                     <div class="empty-div d-flex align-items-center justify-content-between w-100 px-3 border-bottom">
@@ -116,7 +116,7 @@
                 </div>
                 <ng-container *ngIf="!selectedStepFields.length">
                     <ng-container *ngIf="edit.status">
-                        <div class="d-flex flex-column p-4 h-100">
+                        <div class="d-flex flex-column p-4">
                             <div class="d-flex flex-column">
                                 <strong class="mb-5">Attributes</strong>
                                 <div
