--- a/src/app/home/schema-utils/wizards/wizards.component.scss
+++ b/src/app/home/schema-utils/wizards/wizards.component.scss
@@ -1,6 +1,7 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 .builder-body {
+  
   height: calc(100vh - 201px);
   &.schema-creator {
     padding-bottom: 76px !important;
@@ -30,6 +31,11 @@
   }
 }
 
+#schema-creator{
+  .builder-body{
+    min-height: 100% !important;
+  }
+}
 
 .circle {
   min-width: 28px;
@@ -415,7 +421,7 @@
 }
 
 .steps-div {
-  min-height: calc(100vh - 205px);
+  min-height: 400px;
   overflow-y: auto;
   overflow-x: hidden;
   .action-header {
@@ -431,7 +437,9 @@
   min-height: calc(100vh - 205px);
 }
 .content-steps-div {
-  min-height: calc(100vh - 400px);
+  max-height: 160px ;
+  height: 160px !important;
+  min-height: auto;
 }
 
 .ml-4r {
