--- a/src/app/home/schema-utils/wizards/wizards.component.html
+++ b/src/app/home/schema-utils/wizards/wizards.component.html
@@ -338,7 +338,7 @@
     <div class="exp-modal ml-4r">
         <div class="modal-body p-4">
             <div class="text-dark d-flex justify-content-center">
-                <strong>Add Exp Hooks Button</strong>
+                <strong>Add Experience Hooks Button</strong>
             </div>
             <div class="d-flex flex-column mt-4" [formGroup]="actionHookForm">
                 <div class="d-flex w-100 mb-4">
