--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -95,7 +95,7 @@
                             </small>
                         </div>
                     </div>
-                    <!-- <div class="tab-list d-flex align-items-center border-bottom w-100">
+                    <div class="tab-list d-flex align-items-center border-bottom w-100">
                         <div class="tab px-3" [ngClass]="{'text-accent border-accent':activeTab === 1}"
                             (click)="activeTab=1">
                             Permission
@@ -104,7 +104,7 @@
                             (click)="activeTab=2">
                             Condition
                         </div>
-                    </div> -->
+                    </div>
                     <div class="tab-container d-flex align-items-start border-bottom w-100">
                         <div id="tab-1" *ngIf="activeTab === 1">
                             <div class="d-flex w-100 my-3">
@@ -208,7 +208,7 @@
                             <div *ngIf="rule.length>0" class="rule-wrapper border rounded p-3 bg-white">
                                 <ng-container *ngFor="let item of rule;let i=index;let l=last">
                                     <div tabindex="1" class="rule-block d-flex align-items-stretch px-3 rounded"
-                                        [ngClass]="{'focus':blockFocus[i]}" odpClickOutside
+                                        [ngClass]="{'focus':blockFocus[i] && (edit.status) }" odpClickOutside
                                         [ignore]="['.selector-list-item','.common-options-item','.selected-data-service']"
                                         (inside)="blockFocus[i]=true" (outside)="blockFocus[i]=false">
                                         <div class="rule-block-gutter d-flex flex-column align-items-center">
