--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -57,7 +57,7 @@
     </div>
     <div class="d-flex align-items-stretch h-100 w-100">
         <div class="editor-wrapper h-100">
-            <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
+            <!-- <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
                 <div class="view-lines monaco-mouse-cursor-text"
                     style="font-family: Menlo, Monaco, 'Courier New', monospace; font-weight: normal; font-size: 12px; font-feature-settings: 'liga' 0, 'calt' 0; line-height: 18px; letter-spacing: 0px; width: 1078px; height: 336px;">
                     <div style="height:18px;" class="view-line"><span><span class="mtk8">function</span><span
@@ -68,15 +68,15 @@
                                 class="mtk9">{{'{'}}</span></span>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <odp-code-editor *ngIf="showCodeEditor" class="code-editor" [theme]="selectedEditorTheme"
                 [fontSize]="selectedFontSize" [(code)]="faasData.code"></odp-code-editor>
-            <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
+            <!-- <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
                 <div class="view-lines monaco-mouse-cursor-text"
                     style="font-family: Menlo, Monaco, 'Courier New', monospace; font-weight: normal; font-size: 12px; font-feature-settings: 'liga' 0, 'calt' 0; line-height: 18px; letter-spacing: 0px; width: 1078px; height: 336px;">
                     <div style="height:18px;" class="view-line"><span><span class="mtk9">{{'}'}}</span></span></div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="helper-panel bg-light">
             <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0" closeOthers="true">
