rename services in app panel management

--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -235,7 +235,7 @@
                                                     </odp-service-icon>
                                                 </span>
                                                 <span class="ml-2">
-                                                    All Service
+                                                    All Services
                                                 </span>
                                             </div>
                                             <div class="row ml-2">
@@ -272,7 +272,7 @@
                                                 <div class="d-flex justify-content-between p-2"
                                                     (click)="toggleCard('startAll')">
                                                     <div class="text-nowrap text-secondary">Start all
-                                                        service</div>
+                                                        Services</div>
                                                     <div class="position-relative animate-wrap"
                                                         [@cardAction]="startServiceAttributes['animateItems']">
                                                         <div class="position-absolute play-icon"
@@ -325,7 +325,7 @@
                                                 [@cardAction]="startServiceAttributes['stopCard']">
                                                 <div class="d-flex justify-content-between p-2"
                                                     (click)="toggleStopCard('stopAll')">
-                                                    <div class="text-nowrap text-secondary">Stop all service
+                                                    <div class="text-nowrap text-secondary">Stop all Services
                                                     </div>
                                                     <div class="position-relative animate-wrap"
                                                         [@cardAction]="startServiceAttributes['stopanimateItems']">
