--- a/src/app/home/schema-utils/manage-permissions/path-creator/path-creator.component.html
+++ b/src/app/home/schema-utils/manage-permissions/path-creator/path-creator.component.html
@@ -15,6 +15,8 @@
             <span class="fa fa-plus fa-xs text-accent"></span>
         </div>
         <span class="ml-2">Add</span>
+        <span class="fas fa-asterisk fa-xs text-danger error-icon ml-2"
+         ngbTooltip="This is a required field" placement="right"></span>
     </div>
     <div *ngIf="canAddMore && enableManual" class="add-field d-flex align-items-center ignore-outside hover pl-2">
         <input type="text" class="form-control custom-value" odpAutoFocus (keyup.enter)="setField($event)"
