--- a/src/app/home/faas/faas-listing/faas-filter/faas-filter.component.html
+++ b/src/app/home/faas/faas-listing/faas-filter/faas-filter.component.html
@@ -6,8 +6,9 @@
     <select *ngIf="field==='status'" class="border rounded bg-white w-100" [(ngModel)]="value"
         (ngModelChange)="onChange($event)">
         <option value="">--All--</option>
-        <option value="RUNNING">RUNNING</option>
-        <option value="STOPPED">STOPPED</option>
-        <option value="DISABLED">DISABLED</option>
+        <option value="Draft">DRAFT</option>
+        <option value="Pending">PENDING</option>
+        <option value="Active">RUNNING</option>
+        <option value="Undeployed">STOPPED</option>
     </select>
 </div>
