--- a/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.html
+++ b/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.html
@@ -13,7 +13,7 @@
     <span *ngIf="field == 'status'">
         <span *ngIf="data?.status=='Draft'" class="badge badge-accent">DRAFT</span>
         <span *ngIf="data?.status=='Active'" class="badge badge-success">RUNNING</span>
-        <span *ngIf="data?.status=='Pending'" class="badge badge-warning">PENDING</span>
+        <span *ngIf="data?.status=='Pending'" class="badge pending">PENDING</span>
         <span *ngIf="data?.status=='Undeployed'" class="badge badge-danger">STOPPED</span>
     </span>
     <span *ngIf="field == 'lastInvokedAt'">{{value | dateFormat:'YYYY MMM DD, HH:mm:ss, z':'Etc/Zulu'}}</span>
