--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -247,10 +247,10 @@
                                                     (click)="addRule('Condition')">
                                                     <span class="mx-2 text-dark">SELECT</span>
                                                 </div>
-                                                <div class="d-flex align-items-center hover p-2"
+                                                <!-- <div class="d-flex align-items-center hover p-2"
                                                     (click)="addRule('Traverse')">
                                                     <span class="mx-2 text-dark">TRAVERSE</span>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                         <div class="border-border border-right gutter-16"></div>
