--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -241,7 +241,7 @@
                                                 class="value-options-dropdown options-dropdown position-absolute bg-white rounded"
                                                 odpClickOutside (outside)="toggleDropdown['BLOCK']=false">
                                                 <div class="d-flex align-items-center p-2">
-                                                    <span class="mx-2 text-accent">Add step:</span>
+                                                    <span class="mx-2 text-accent add-step">Add step:</span>
                                                 </div>
                                                 <div class="d-flex align-items-center hover p-2"
                                                     (click)="addRule('Condition')">
